[package]
name = "payment_engine"
version = "0.1.0"
authors = ["Junjun Dong <junjun.dong9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "payment_engine"
path = "src/lib.rs"

[[bin]]
name = "payment_engine"
path = "src/main.rs"

[dependencies]
csv = "1"
log = "0"
env_logger = "0"
clap = "2"
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0"
